[package]
name = "ncm_api"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
ecb = "0.1.2"
cbc = "0.1.2"
base64 = "0.22.1"
rsa = "0.9.8"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.8.0"
hex = "0.4"
num-bigint = "0.4.6"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
serde_urlencoded = "0.7.1"
chrono = "0.4.42"

[lib]
name = "ncm_api"
path = "src/lib.rs"
